--- a/customs.html
+++ b/customs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="stylesheet.css">
     <meta charset="UTF-8">
@@ -8,8 +8,8 @@
     <meta name="author" content="Sarah Henderson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Mother Rocks Jewellery</title> <!-- Title -->
-    
-    
+
+
 </head>     <!--  Head  -->
 <body>
 
