Added an extra video at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
         </div>    <!-- Remodeling Video -->   
     </div>      <!-- Main Gallery -->
 
-    <div class=""
+    <div>
+        <a href="index.html">
+            <video autoplay muted loop>
+                <source src="Content/express_video_1.mp4"
+            </video>
+        </a>
+    </div>
 
 </body>      <!--  Body  -->
 </html>
