Added more commenting for the last change

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <source src="Content/express_video_1.mp4"
             </video>
         </a>
-    </div>
+    </div>      <!-- Express Yourself Video-->
 
 </body>      <!--  Body  -->
 </html>
