Fixed issue with missing ">" (No visable changes but It would become a problem later on)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div>
         <a href="index.html">
             <video autoplay muted loop>
-                <source src="Content/express_video_1.mp4"
+                <source src="Content/express_video_1.mp4">
             </video>
         </a>
     </div>      <!-- Express Yourself Video-->
