--- a/earrings.html
+++ b/earrings.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Sarah Henderson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Mother Rocks Jewellery</title> <!-- Title -->
-    
+    <link rel="icon" type="content/x-icon" href="/content/logo_2.png">
     
 </head>     <!--  Head  -->
 <body>
