Added Banner as test

--- a/earrings.html
+++ b/earrings.html
@@ -12,7 +12,13 @@
     
 </head>     <!--  Head  -->
 <body>
-
+    <div class="header">
+        <div class="logo">
+            <a href="index.html">
+                <img class="logoimg" src="Content/logo_2.png" alt="Mother Rocks jewellery, the collection">
+            </a>
+        </div>
+    </div>      <!-- Header -->
 
 </body>      <!--  Body  -->
 </html>
