Changed "Custom" tab to be "necklace" tab

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="grid-item">
             <a href="customs.html">
              <video autoplay muted loop>
-		    		<source src="Content/custom_video_1.mov">
+		    		<source src="Content/necklace_video_1.mp4">
 		    	</video>
             </a>
         </div>    <!-- Necklaces Video -->
