--- a/rings.html
+++ b/rings.html
@@ -22,12 +22,8 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <a href="bangles.html">
-                <video autoplay muted loop>
-				    <source src="Content/bangle_video_1.mov">
-			    </video>
-            </a>
-        </div>     <!-- Bangles Video -->
+            <img width="320" height="568" src="content/rings/image_0.jpg">
+        </div>     <!-- Image 0 -->
         
         <div class="grid-item">
             <a href="customs.html">
