--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>     <!-- Bangles Video -->
         
         <div class="grid-item">
-            <a href="customs.html">
+            <a href="necklaces.html">
                 <video width="320" height="568" autoplay muted loop>
 		    		<source src="Content/necklace_video_1.mp4">
 		    	</video>
