--- a/rings.html
+++ b/rings.html
@@ -22,7 +22,7 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <img width="320" height="568" src="content/rings/image_0.jpg">
+            <img src="content/rings/image_0.jpg">
         </div>     <!-- Image 0 -->
         
         <div class="grid-item">
