Updated some images

--- a/rings.html
+++ b/rings.html
@@ -30,7 +30,9 @@
         </div>     <!-- Image 1 -->
 
         <div class="grid-item">
-            <img style="width:100%;height:100%;" src="content/rings/image_2.jpg">
+            <video width="320" height="568" autoplay muted loop>
+                <source src="Content/rings/video_0.mp4">
+            </video>
         </div>     <!-- Image 2 -->
         
         <div class="grid-item">
