fixed spelling issue

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="grid-item">
             <a href="necklaces.html">
                 <video width="320" height="568" autoplay muted loop>
-		    		<source src="Content/necklace_video.mp4">
+		    		<source src="Content/necklaces_video.mp4">
 		    	</video>
             </a>
         </div>    <!-- Necklaces Video -->
