--- a/rings.html
+++ b/rings.html
@@ -17,6 +17,7 @@
             <a href="index.html">
                 <img class="logoimg" src="Content/logo_1.png" alt="Mother Rocks jewellery, the collection">
             </a>
+            <button class="contactBtn">Contact Us</button>
         </div>
     </div>      <!-- Header -->
 
