--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <div class="header">
         <div class="logo">
             <a href="index.html">
-                <img class="logoimg" src="Content/logo_1.png" alt="Mother Rocks jewellery, the collection">
+                <img class="logoimg" src="Content/logo_1.png" alt="Mother Rocks jewellery, the collection" usemap="#logomap">
             </a>
+
+            <map name="logomap">
+                <area shape="rect" coords="2275, 20, 2700, 130" href="contact.html">
+            </map>
         </div>
     </div>      <!-- Header -->
 
