trying to fix my life

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img class="logoimg" src="Content/logo_1.png" alt="Mother Rocks jewellery, the collection" usemap="#logomap">
             
             <map name="logomap">
-                <area shape="rect" coords="2275, 20, 2700, 130" href="contact.html">
+                <area shape="rect" coords="2275, 20, 2700, 130" alt="Contact us" href="contact.html">
             </map>
         </div>
     </div>      <!-- Header -->
