removed img class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img class="logoimg" src="Content/logo_1.png" alt="Mother Rocks jewellery, the collection" usemap="#logomap">
+            <img src="Content/logo_1.png" alt="Mother Rocks jewellery, the collection" usemap="#logomap">
             
             <map name="logomap">
                 <area shape="rect" coords="2275, 20, 2700, 130" alt="Contact us" href="contact.html">
