--- a/remodeling.html
+++ b/remodeling.html
@@ -14,9 +14,15 @@
 <body>
     <div class="header">
         <div class="logo">
-            <a href="index.html">
-                <img class="logoimg" src="Content/logo_1.png" alt="Mother Rocks jewellery, the collection">
-            </a>
+           <!-- Logo Image -->
+           <a href="index.html">
+                <img class="logo_img" src="Content/logo_2.png">
+           </a> 
+
+           <!-- Contact Button -->
+           <a href="contact.html">
+                <img class="contact_button" src="Content/contact_button.png">
+           </a>
         </div>
     </div>      <!-- Header -->
 
