Updated Footer for all pages

--- a/contact.html
+++ b/contact.html
@@ -26,5 +26,14 @@
         </div>
     </div>      <!-- Header -->
 
+
+    
+    <div class="footer_video">
+        <a href="index.html">
+            <video width="92.5%" autoplay muted loop>
+                <source src="Content/express_video_1.mp4">
+            </video>
+        </a>
+    </div>      <!-- Footer Video-->
 </body>      <!--  Body  -->
 </html>
