--- a/earrings.html
+++ b/earrings.html
@@ -89,13 +89,13 @@
 
     </div>      <!-- Main Gallery -->
 
-    <div>
+    <div class="footer_video">
         <a href="index.html">
-            <video autoplay muted loop>
+            <video width="92.5%" autoplay muted loop>
                 <source src="Content/express_video_1.mp4">
             </video>
         </a>
-    </div>      <!-- Express Yourself Video-->
+    </div>      <!-- Footer Video-->
 
 </body>      <!--  Body  -->
 </html>
