--- a/rings.html
+++ b/rings.html
@@ -36,9 +36,7 @@
         </div>     <!-- Image 1 -->
 
         <div class="grid-item">
-            <video width="320" height="568" autoplay muted loop>
-                <source src="Content/rings/video_0.mp4">
-            </video>
+            <img style="width:100%;height:100%;" src="content/rings/image_9.jpg">
         </div>     <!-- Image 2 -->
         
         <div class="grid-item">
@@ -66,7 +64,7 @@
         </div>     <!-- Image 8 -->
         
         <div class="grid-item">
-            <img style="width:100%;height:100%;" src="content/rings/image_9.jpg">
+            <img style="width:100%;height:100%;" src="content/placeholder.png">
         </div>     <!-- Image 9 -->
 
     </div>      <!-- Main Gallery -->
