Replaced remodeling with customs

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         </div>    <!-- Rings Video -->
         
         <div class="grid-item">
-            <a href="remodeling.html">
+            <a href="customs.html">
                 <video width="100%" autoplay muted loop>
-                    <source src="Content/remodeling_video_1.mov">
+                    <source src="Content/custom_video_1.mov">
                 </video>
             </a>
-        </div>    <!-- Remodeling Video -->   
+        </div>    <!-- Custom Video -->   
     </div>      <!-- Main Gallery -->
 
     <div class="footer_video">
