Added second line break for better page design

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
         <!-- Text Description -->
         <div class="contact-text">
-            <h1>I love making jewellery that has the "wow" factor. Not being "every day" pieces, my jewellery deserves to be taken out somewhere swanky! I have been a jeweller for twenty years and learnt my trade as a bench hand for three talented jewellers over the course of ten years. <br>I love to push the boundaries with my design ideas. I work mostly with silver and gold and pride myself on its handmade value. A lot of my work can be worn in multiple ways and has an element of fun. <br>My aim is to make something that will always be in style using sleek lines and a quality finish.</h1>
+            <h1>I love making jewellery that has the "wow" factor. Not being "every day" pieces, my jewellery deserves to be taken out somewhere swanky! I have been a jeweller for twenty years and learnt my trade as a bench hand for three talented jewellers over the course of ten years. <br><br>I love to push the boundaries with my design ideas. I work mostly with silver and gold and pride myself on its handmade value. A lot of my work can be worn in multiple ways and has an element of fun. <br><br>My aim is to make something that will always be in style using sleek lines and a quality finish.</h1>
         </div>
         
     </div>      <!-- Main Content -->
