Added a contact image

--- a/customs.html
+++ b/customs.html
@@ -114,7 +114,7 @@
         </div>     <!-- Image 3 -->
         
         <div class="grid-item">
-            <img style="width:100%;height:100%;" src="content/placeholder.png">
+            <img style="width:100%;height:100%;" src="content/contact4more.png">
         </div>     <!-- Image 4 -->
         
     </div>      <!-- Main Gallery -->
