preloads some images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>Mother Rocks Jewellery</title> <!-- Title -->
 	<link rel="icon" type="content/x-icon" href="/content/logo_2.png">
     
+    <!-- Pre-loads Main images-->
+    <link rel="preload" href="content/logo_2.png">
+    <link rel="preload" href="content/contact_button.png">
+    
 </head>     <!--  Head  -->
 <body>
     <div class="header">
